--- a/Cliente WPF/SerpientesEscaleras/Turno.xaml
+++ b/Cliente WPF/SerpientesEscaleras/Turno.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:SerpientesEscaleras"
         xmlns:p="clr-namespace:SerpientesEscaleras.Properties"
         xmlns:materialDesign ="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:gif="http://wpfanimatedgif.codeplex.com"
         mc:Ignorable="d"
         Title="Turno" Height="300" Width="400"  WindowStartupLocation="CenterScreen" WindowStyle="ThreeDBorderWindow" Opacity="0.9" 
         FontSize="18" ResizeMode="CanMinimize" Icon="Resources/iconoApp.ico">
@@ -13,18 +14,31 @@
         <SolidColorBrush Color="#FF1C1C1C"/>
     </Window.Background>
     <Grid>
-        <ScrollViewer HorizontalScrollBarVisibility="Visible" HorizontalAlignment="Center"  Width="350"
-                      VerticalAlignment="Bottom" Margin="22,0,22,60" VerticalScrollBarVisibility="Disabled">
+        <Label x:Name="label_Instruccion" HorizontalAlignment="Left" Margin="10,25,0,0" VerticalAlignment="Top" 
+               Height="35" Width="300" Foreground="White"/>
+        <Grid x:Name="grid_Dados" VerticalAlignment="Center" HorizontalAlignment="Center" Visibility="Collapsed">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="100"/>
+            </Grid.RowDefinitions>
+            <Image x:Name="image_Dado2" Height="100" Width="100" Visibility="Collapsed"
+               gif:ImageBehavior.AutoStart="False" gif:ImageBehavior.AnimationLoaded="gif2_Cargado" 
+               gif:ImageBehavior.RepeatBehavior="2x" gif:ImageBehavior.AnimationCompleted="gif2_Terminado"/>
+            <Image x:Name="image_Dado" Height="100" Width="100" Visibility="Collapsed"
+               gif:ImageBehavior.AutoStart="False" gif:ImageBehavior.AnimationLoaded="gif_Cargado" 
+               gif:ImageBehavior.RepeatBehavior="2x" gif:ImageBehavior.AnimationCompleted="gif_Terminado"/>
+        </Grid>
+        <ScrollViewer x:Name="scrollViewer_Fichas" HorizontalScrollBarVisibility="Visible" HorizontalAlignment="Center"  
+                      Width="350" VerticalAlignment="Center" VerticalScrollBarVisibility="Disabled" Visibility="Collapsed"
+                      Margin="0,10,0,0">
             <Grid x:Name="grid_Fichas" HorizontalAlignment="Center" VerticalAlignment="Top">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="100"/>
                 </Grid.RowDefinitions>
             </Grid>
         </ScrollViewer>
-        <Label x:Name="label_Instruccion" HorizontalAlignment="Left" Margin="44,49,0,0" VerticalAlignment="Top" Foreground="White"/>
-        <Button x:Name="button_Elegir" HorizontalAlignment="Right" Margin="0,0,20,10" 
-                VerticalAlignment="Bottom" Width="100" Click="Button_Elegir" Visibility="Hidden" Foreground="White"/>
-        <Button x:Name="button_Tirar" HorizontalAlignment="Center" Margin="0,0,0,10" 
-                VerticalAlignment="Bottom" Width="100" Click="Button_Tirar" Visibility="Hidden" Foreground="White"/>
+        <Button x:Name="button_Elegir" HorizontalAlignment="Right" Margin="0,0,20,15" 
+                VerticalAlignment="Bottom" Width="100" Click="Button_Elegir" Visibility="Collapsed" Foreground="White"/>
+        <Button x:Name="button_Tirar" HorizontalAlignment="Center" Margin="0,0,0,15" 
+                VerticalAlignment="Bottom" Width="100" Click="Button_Tirar" Visibility="Collapsed" Foreground="White"/>
     </Grid>
 </Window>
