--- a/Cliente WPF/SerpientesEscaleras/MainWindow.xaml
+++ b/Cliente WPF/SerpientesEscaleras/MainWindow.xaml
@@ -43,7 +43,9 @@
                 <DropShadowEffect BlurRadius="10" RenderingBias="Quality" ShadowDepth="8"/>
             </Button.Effect>
         </Button>
-        <TextBlock x:Name="textBlock_SinCuenta" HorizontalAlignment="Left" Margin="398,318,0,0" TextWrapping="Wrap" Text="{x:Static p:Resources.textBlockSinCuenta}" VerticalAlignment="Top" Height="22" Width="170" TextDecorations="{x:Null}" OpacityMask="#FFFF4040" Foreground="White" FontSize="14"/>
+        <TextBlock x:Name="textBlock_SinCuenta" HorizontalAlignment="Left" Margin="398,318,0,0" TextWrapping="Wrap" 
+                   Text="{x:Static p:Resources.textBlockSinCuenta}" VerticalAlignment="Top" Height="22" Width="170" 
+                   TextDecorations="{x:Null}" OpacityMask="#FFFF4040" Foreground="White" FontSize="14"/>
         <Menu IsMainMenu="True"  HorizontalAlignment="Right" Margin="0,10,15,0" VerticalAlignment="Top" 
               Width="100" RenderTransformOrigin="0.5,0.5" FontSize="16">
             <Menu.Background>
