--- a/Cliente WPF/SerpientesEscaleras/Turno.xaml
+++ b/Cliente WPF/SerpientesEscaleras/Turno.xaml
@@ -8,10 +8,10 @@
         xmlns:materialDesign ="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:gif="http://wpfanimatedgif.codeplex.com"
         mc:Ignorable="d"
-        Title="Turno" Height="300" Width="400"  WindowStartupLocation="CenterScreen" WindowStyle="ThreeDBorderWindow" Opacity="0.9" 
-        FontSize="18" ResizeMode="CanMinimize" Icon="Resources/iconoApp.ico">
+        Title="Turno" Height="300" Width="400"  WindowStartupLocation="CenterScreen" AllowsTransparency="True" 
+        WindowStyle="None" FontSize="18" ResizeMode="CanMinimize" Icon="Resources/iconoApp.ico" Closing="Cerrando">
     <Window.Background>
-        <SolidColorBrush Color="#FF1C1C1C"/>
+        <SolidColorBrush Color="#FF1C1C1C" Opacity="0.7"/>
     </Window.Background>
     <Grid>
         <Label x:Name="label_Instruccion" HorizontalAlignment="Left" Margin="10,25,0,0" VerticalAlignment="Top" 
