--- a/Cliente WPF/SerpientesEscaleras/Turno.xaml
+++ b/Cliente WPF/SerpientesEscaleras/Turno.xaml
@@ -40,5 +40,7 @@
                 VerticalAlignment="Bottom" Width="100" Click="Button_Elegir" Visibility="Collapsed" Foreground="White"/>
         <Button x:Name="button_Tirar" HorizontalAlignment="Center" Margin="0,0,0,15" 
                 VerticalAlignment="Bottom" Width="100" Click="Button_Tirar" Visibility="Collapsed" Foreground="White"/>
+        <Button x:Name="button_Salir" HorizontalAlignment="Left" Margin="20,0,0,15" 
+                VerticalAlignment="Bottom" Width="100" Click="Button_Salir" Visibility="Collapsed" Foreground="White"/>
     </Grid>
 </Window>
